# NSU-OS-LABS-2

./: .gitignore  CMakeLists.txt
laboratory-1/: description.txt  main.c
laboratory-10/: README.txt  main.c  mainSimple.c  mainSmart.c
laboratory-11/: README.txt  example.c  main.c
laboratory-12/: README.txt
laboratory-13/: README.txt  main.c
laboratory-14/: README.txt  main.c
laboratory-15/: README.txt
laboratory-16/: README.txt  main.c
laboratory-17/: README.txt  list.c  list.h  main.c  stringProcessing.c  stringProcessing.h  util.c  util.h
laboratory-2/: README.txt  main.c
laboratory-22/: README.txt  main.c
laboratory-23/: README.txt  list.c  main.c  util.h
laboratory-24/: README.txt  main.c
laboratory-25/: README.txt  main.c
laboratory-26/: README.txt  main.c
laboratory-27/: README.txt  main.c
laboratory-28-29-30/: README.txt  aioBasedClient.c  clientPart.h  defAssigns.h  main.c  networkPart.c  networkPart.h  selectBasedClient.c  threadsBasedClient.c
laboratory-3/: README.txt  main.c
laboratory-4/: README.txt  main.c
laboratory-5/: README.txt  main.c
laboratory-6/: README.txt  main.c  testfile.txt
laboratory-7/: README.txt  defAssigns.h  main.c  smartFunctions.c  smartFunctions.h
laboratory-8/: README.txt  main.c
laboratory-9/: README.txt  main.c
