cmake_minimum_required(VERSION 3.0.2)
project(NSU_OS_LABS_2 C)

set(CMAKE_C_STANDARD 11)

add_executable(LAB1-SOURCE laboratory-1/main.c)
add_executable(LAB2-SOURCE laboratory-2/main.c)
add_executable(LAB3-SOURCE laboratory-3/main.c)
add_executable(LAB4-SOURCE laboratory-4/main.c)
add_executable(LAB5-SOURCE laboratory-5/main.c)
add_executable(LAB6-SOURCE laboratory-6/main.c)
add_executable(LAB8-SOURCE laboratory-8/main.c)
add_executable(LAB9-SOURCE laboratory-9/main.c)
add_executable(LAB10-SOURCE laboratory-10/main.c)
