cmake_minimum_required(VERSION 3.0.2)
project(NSU_OS_LABS_2 C)

set(CMAKE_C_STANDARD 11)

add_executable(LAB1-SOURCE laboratory-1/main.c)
add_executable(LAB2-SOURCE laboratory-2/main.c)
add_executable(LAB3-SOURCE laboratory-3/main.c)
add_executable(LAB4-SOURCE laboratory-4/main.c)
add_executable(LAB5-SOURCE laboratory-5/main.c)
add_executable(LAB6-SOURCE laboratory-6/main.c)
add_executable(LAB8-SOURCE laboratory-8/main.c)
add_executable(LAB9-SOURCE laboratory-9/main.c)
add_executable(LAB10SIM-SOURCE laboratory-10/mainSimple.c)
add_executable(LAB10SEM-SOURCE laboratory-10/mainSmart.c)
add_executable(LAB11-SOURCE laboratory-11/example.c)
add_executable(LAB13-SOURCE laboratory-13/main.c)
